# jssml-enmeshed-bootstrapping

./: .gitignore  README.md  architecture.drawio  bootstrap.py  build-app.sh  build-app0.sh  demo.py  docker-compose.yml  install-app.sh  pyproject.toml  run-usecase.py
config/: backbone-appsettings.json  connector-config.json  connector2-config.json
enmeshed_bootstrapping/: c2_server.py  connector_agent.py  connector_sdk.py  dev_app.py  lib.py  ollama_client.py  webhook_server.py
enmeshed_bootstrapping/agents/: __init__.py  auto_responder.py
enmeshed_bootstrapping/agents/lsf_agent/: __init__.py
enmeshed_bootstrapping/flows/: bootstrap.py
